@@ -1,3 +1,6 @@
+2010-08-24  Eric Belanger  <eric@archlinux.org>
+
+	* Rebuilt for python2
 
 2009-08-06  Douglas Soares de Andrade  <douglas@archlinux.org>
 
